# ElectronicsPrices

./: .env.prod.example  .gitignore  MAKE_COMMANDS.md  Makefile  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4960fb3daf04_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  public.py
backend/app/api/admin/: __init__.py  grouping.py  listings.py  runs.py  schedule.py  sites.py
backend/app/core/: beat_schedule.py  celery_app.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  listing.py  order.py  price_history.py  product.py  schedule_job.py  scrape_run.py  site.py
backend/app/schemas/: run.py  schedule.py  site.py
backend/app/scrapers/: __init__.py  acer.py  amazon.py  base.py  clarion.py  computech.py  dynamic.py  facebook.py  fusiongaming.py  lenovo.py  mdcomputers.py  modx.py  olx.py  registry.py  shopify.py  smc.py  static.py  woocommerce.py
backend/app/services/: grouping.py  scoring.py  search.py
backend/app/tasks/: scrape.py
backend/scripts/: auto_configure.py  configure_html_sites.py  seed.py
backend/tests/: test_app.py
claudedocs/: acer-scrape-investigation.md  amazon-scrape-paths.md  antpc-scrape-investigation.md  asus-scrape-investigation.md  cf-blocked-sites-aggregator.md  computech-modx-scrape-investigation.md  facebook-marketplace-investigation.md  lenovo-scrape-investigation.md  low-value-sites.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  (+4 more)
(+29 files in other folders)
