[project]
name = "electronics-inventory-backend"
version = "0.1.0"
description = "Electronics inventory price scraping and API backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "scrapy>=2.11.2",
    "playwright>=1.48.0",
    "playwright-stealth>=2.0.3",
    "rapidfuzz>=3.10.1",
    "apscheduler>=3.10.4",
    "celery>=5.4.0",
    "redis>=5.1.1",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
